{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 47,
  "lineage": "b4ff0d08-50f1-155d-1191-a2be661e003e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "MRT1_call",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418222700:route-table/rtb-0ef82d2cd7b812f1b",
            "default_route_table_id": "rtb-0ef82d2cd7b812f1b",
            "id": "rtb-0ef82d2cd7b812f1b",
            "owner_id": "905418222700",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c47a3e139fbffe4e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MRT1"
            },
            "tags_all": {
              "Name": "MRT1"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c23fc28e56fb575"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW1_call",
            "aws_vpc.vpc1_call"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_call",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01244dc09764518a3",
            "arn": "arn:aws:ec2:us-east-1:905418222700:elastic-ip/eipalloc-01244dc09764518a3",
            "domain": "vpc",
            "id": "eipalloc-01244dc09764518a3",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-232-143-216.compute-1.amazonaws.com",
            "public_ip": "18.232.143.216",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW1_call",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418222700:internet-gateway/igw-0c47a3e139fbffe4e",
            "id": "igw-0c47a3e139fbffe4e",
            "owner_id": "905418222700",
            "tags": {
              "Name": "IGW1"
            },
            "tags_all": {
              "Name": "IGW1"
            },
            "vpc_id": "vpc-01c23fc28e56fb575"
          },
          "dependencies": [
            "aws_vpc.vpc1_call"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NGW1_call",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01244dc09764518a3",
            "association_id": "eipassoc-0dedfc5342a15ad50",
            "connectivity_type": "public",
            "id": "nat-0f8778d012c2d5dad",
            "network_interface_id": "eni-00428f3295874c0b6",
            "private_ip": "10.10.1.48",
            "public_ip": "18.232.143.216",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ca662b8dc9542e57",
            "tags": {
              "Name": "NGW1"
            },
            "tags_all": {
              "Name": "NGW1"
            }
          },
          "dependencies": [
            "aws_eip.eip_call",
            "aws_subnet.PublicSubnet_call",
            "aws_vpc.vpc1_call"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "CRT1_call",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418222700:route-table/rtb-073ee18d749a3d802",
            "id": "rtb-073ee18d749a3d802",
            "owner_id": "905418222700",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f8778d012c2d5dad",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "CRT1"
            },
            "tags_all": {
              "Name": "CRT1"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c23fc28e56fb575"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_call",
            "aws_nat_gateway.NGW1_call",
            "aws_subnet.PublicSubnet_call",
            "aws_vpc.vpc1_call"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "crt1_call_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0823d261a1f1a79d4",
            "route_table_id": "rtb-073ee18d749a3d802",
            "subnet_id": "subnet-0545bb2ec33e663ff"
          },
          "dependencies": [
            "aws_eip.eip_call",
            "aws_nat_gateway.NGW1_call",
            "aws_route_table.CRT1_call",
            "aws_subnet.PrivateSubnet_call",
            "aws_subnet.PublicSubnet_call",
            "aws_vpc.vpc1_call"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mrt1_call_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f75cc39fb31ca0a0",
            "route_table_id": "rtb-0ef82d2cd7b812f1b",
            "subnet_id": "subnet-0ca662b8dc9542e57"
          },
          "dependencies": [
            "aws_default_route_table.MRT1_call",
            "aws_internet_gateway.IGW1_call",
            "aws_subnet.PublicSubnet_call",
            "aws_vpc.vpc1_call"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnet_call",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418222700:subnet/subnet-0545bb2ec33e663ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0545bb2ec33e663ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418222700",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "V1PrivateSubnet"
            },
            "tags_all": {
              "Name": "V1PrivateSubnet"
            },
            "vpc_id": "vpc-01c23fc28e56fb575"
          },
          "dependencies": [
            "aws_vpc.vpc1_call"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet_call",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418222700:subnet/subnet-0ca662b8dc9542e57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca662b8dc9542e57",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418222700",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "V1PublicSubnet"
            },
            "tags_all": {
              "Name": "V1PublicSubnet"
            },
            "vpc_id": "vpc-01c23fc28e56fb575"
          },
          "dependencies": [
            "aws_vpc.vpc1_call"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1_call",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418222700:vpc/vpc-01c23fc28e56fb575",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-037b6e3691912dbd8",
            "default_route_table_id": "rtb-0ef82d2cd7b812f1b",
            "default_security_group_id": "sg-05d63291313a9ff70",
            "dhcp_options_id": "dopt-03b59ebebb4037e48",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01c23fc28e56fb575",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ef82d2cd7b812f1b",
            "owner_id": "905418222700",
            "tags": {
              "Name": "VPC1"
            },
            "tags_all": {
              "Name": "VPC1"
            }
          }
        }
      ]
    }
  ]
}